--- a/week02/styles/box-model.css
+++ b/week02/styles/box-model.css
@@ -1,15 +1,34 @@
 .callout {
-	
+	max-width:400px ;
+    margin: 20px;
+    border: 1px solid black ;
+    padding:10px ;
+    background-color:#26547C ;
+    color: white;
 }
 
 .callout img {
-	
+	float:right;
+    margin: 10px;
+    border:2px solid white;
+    padding: 5px;
+    background-color: none;
+    width: 80px;
+    height:80px;
 }
 
 blockquote {
-	
+	margin:10px;
+}
+
+blockquote p {
+    font-size: 16px;
 }
 
 cite {
-	
+	display:block;
+    border-top: 1px dotted white;
+    padding-top: 5px;
+    text-align:right ; 
+    font-size:17px;
 }
