--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,7 +34,7 @@ width: 320px;
 margin:18px;
 border: 1px solid whitesmoke;
 padding: 16px;
-background-color:f1f1f1;
+background-color:eeeeee;
 color: #333;
 }
 
