--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,7 +30,7 @@ width: 320px;
 margin:18px;
 border: 1px solid whitesmoke;
 padding: 16px;
-background-color:eeeeee;
+background-color:whitesmoke;
 color: #333;
 }
 
