--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,22 +1,30 @@
+:root {
+    --primary-color:darkblue;
+    --nav-color:white;
+    --padding: 1rem;
+    --border: 1px solid black;
+}
+
+
 nav {
-    background-color: darkblue;
-    padding: 10px;
+    background-color: var(--primary-color);
+    padding: var(--padding)
 }
 
 nav a {
     color: white;
     display: block;
-    padding: 20px;
+    padding: var(--padding)
 }
 
 h1 {
-    color: darkblue;
+    color: var(--primary-color)
 }
 
 main img {
     width: 150px;
     height: auto;
-    border: 1px solid black;
+    border: var(--border);
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
@@ -46,5 +54,5 @@ p {
 footer {
     margin-top: 15px;
     text-align: center;
-    border-top: 1px solid #000;
+    border-top: var(--border);
 }
