--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -42,6 +42,11 @@ nav, p, section, article {
     text-decoration: none;
 }
 
+.socialmedia {
+    width: 32px;
+    
+}
+
 .hero {
     position: relative;
 }
